<resources>
    <string name="app_name">N4got</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_cad_red">CadRedActivity</string>
    <string name="RedeSocial">Rede Social</string>
    <string name="usuario">Usuário/E-mail: </string>
    <string name="Senha">Senha:</string>
    <string name="title_activity_cad_banco">CadBancoActivity</string>
    <string name="Banco">Banco</string>
    <string name="ag">Agencia</string>
    <string name="cc">Conta</string>
    <string name="salvar">Salvar</string>
    <string name="adicionar">Adicionar</string>
    <string name="title_activity_cad_outros">CadOutrosActivity</string>
    <string name="outros">Outros</string>
    <string name="nome_do_atributo">Nome do Atributo:</string>
    <string name="atributo">Atributo:</string>
</resources>
