<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".View.CadRedActivity"
    tools:showIn="@layout/activity_cad_red">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RedeSocial"
        android:id="@+id/txtTopo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/TamanhoLetraGrande" />

    <ImageView
        android:layout_width="@dimen/padraoImg"
        android:layout_height="@dimen/padraoImg"
        android:id="@+id/imgRede"
        android:layout_below="@+id/txtTopo"
        android:src="@drawable/fb"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinred"
        android:layout_below="@+id/imgRede"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:id="@+id/textView4"
        android:textSize="@dimen/Letramedia"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtUsuario"

        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Senha"
        android:id="@+id/textView5"
        android:textSize="@dimen/Letramedia"
        android:layout_below="@+id/edtUsuario"
        android:layout_toLeftOf="@+id/edtUsuario"
        android:layout_toStartOf="@+id/edtUsuario"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtSenha"
        android:layout_alignTop="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_alignRight="@+id/edtUsuario"
        android:layout_alignEnd="@+id/edtUsuario" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:id="@+id/button"
        android:layout_below="@+id/edtSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

</RelativeLayout>
